# paivas-burning-memory-export

./: package.json  pnpm-lock.yaml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
