[package]
name = "paiva-burning-memory-export"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde_json = "1"
sqlx = { version = "0.8.2", features = [ "runtime-async-std", "tls-rustls", "postgres", "chrono" ] }
url = "2.5.2"
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.210"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
